쿼리 메서드를 이용한 다중 검색기능 구현(like) - 코드 수정

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -12,7 +12,7 @@
     </div>
 
     <div class="row mb-3">
-            <th:block  th:if="${session.UID ne null}">
+<!--            <th:block  th:if="${session.UID ne null}">-->
         <div class="col-1">
             <select class="form-select" id="findtype">
                 <option value="title">제목</option>
@@ -34,7 +34,7 @@
                 <button type="button" id="newbtn" name="newbtn" class="btn btn-light">
                     <i class="fa fa-plus-circle"></i>새글쓰기</button>
         </div>
-</th:block>&nbsp;
+<!--</th:block>&nbsp;-->
     </div>
 
 
