--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -92,7 +92,8 @@
 
 <!--                    <th:block th:if="${(cpg+1) lt cntpg}"><li class="page-item"></th:block>-->
 <!--                    <th:block th:if="${(cpg+1) gt cntpg}"><li class="page-item disabled"></th:block>-->
-                    <li th:class="${ (cpg+1 lt cntpg) ? 'page-item' : 'page-item disabled' }">
+
+                    <li th:class="${ (cpg + 1 le cntpg) ? 'page-item' : 'page-item disabled' }">
                     <a class="page-link" th:href="|${pglink}${cpg + 1}|">다음</a></li>
 
 
