5-24일자 pds,pilot 작성 - pds는 미완

--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -8,7 +8,7 @@
 
     <th:block th:if="${cpg > cntpg}">
         <script th:inline="javascript">
-            location.href="/board/list?cpg=" + [[${cntpg}]];
+            location.href=[[${pglink}]] + [[${cntpg}]];
         </script>
     </th:block>
 
@@ -19,7 +19,7 @@
     </div>
 
     <div class="row mb-3">
-<!--            <th:block  th:if="${session.UID ne null}">-->
+            <th:block  th:if="${session.UID ne null}">
         <div class="col-1">
             <select class="form-select" id="findtype">
                 <option value="title">제목</option>
@@ -41,7 +41,7 @@
                 <button type="button" id="newbtn" name="newbtn" class="btn btn-light">
                     <i class="fa fa-plus-circle"></i>새글쓰기</button>
         </div>
-<!--</th:block>&nbsp;-->
+</th:block>&nbsp;
     </div>
 
 
