--- a/src/main/resources/templates/board/view.html
+++ b/src/main/resources/templates/board/view.html
@@ -19,10 +19,10 @@
 
         </div>
         <div class="col-4 text-end">
-            <th:block  th:if="${not #strings.isEmpty(session.UID)}">
+<!--            <th:block  th:if="${not #strings.isEmpty(session.UID)}">-->
             <button type="button" class="btn btn-success" name="newbtn" id="newbtn">
                 <i class="fa fa-plus-circle"> </i> 새글쓰기</button>
-            </th:block>
+<!--            </th:block>-->
         </div>
     </div>
 
