--- a/src/main/resources/templates/join/joinme.html
+++ b/src/main/resources/templates/join/joinme.html
@@ -41,14 +41,14 @@
     <div class="card card-body bg-light mt-5 mx-3">
         <h3 class="mb-5">일반회원</h3>
 
-        <form name="joinfrm" id="joinfrm" method="post">
+        <form name="joinfrm" id="joinfrm" method="post" th:object="${member}">
             <div class="row">
                 <div class="row col-11 offset-1 mb-3 align-items-center">
                     <label class="col-2 form-label text-danger text-end"
                            for="name">이름</label>
                     <div class="col-3">
                         <input type="text" name="name" id="name" readonly
-                               class="form-control border-danger bg-light" th:value=`${mb.name}`> </div>
+                               class="form-control border-danger bg-light" th:value=`${session.ckm.name}`> </div>
                 </div>
 
                 <div class="row col-11 offset-1 mb-3 align-items-center">
@@ -56,10 +56,10 @@
                            for="jumin1">주민번호</label>
                     <div class="col-3">
                         <input type="text" name="jumin1" id="jumin1" readonly
-                               class="form-control border-danger bg-light" th:value=`${mb.jumin1}`> </div>
+                               class="form-control border-danger bg-light" th:value=`${session.ckm.jumin1}`> </div>
                     <div class="col-3">
                         <input type="text" name="jumin2" id="jumin2" readonly
-                               class="form-control border-danger bg-light" th:value=`${mb.jumin2}`> </div>
+                               class="form-control border-danger bg-light" th:value=`${session.ckm.jumin2}`> </div>
                 </div>
 
                 <div class="row col-11 offset-1 mb-3 align-items-center">
@@ -69,7 +69,8 @@
                         <input type="text" name="userid" id="userid"
                                class="form-control border-danger"> </div>
                     <div class="col-auto">
-                            <span id="uidmsg" class="form-text">
+                            <span id="uidmsg" class="text-warning"
+                                  th:if="${#fields.hasErrors('userid')}" th:errors="*{userid}">
                                 6~16 자의 영문 소문자, 숫자와 특수기호(_)만 사용할 수 있습니다</span> </div>
                 </div>
 
@@ -80,7 +81,8 @@
                         <input type="password" name="passwd" id="passwd"
                                class="form-control border-danger"> </div>
                     <div class="col-auto">
-                            <span id="pwdmsg"  class="form-text">
+                             <span id="pwdmsg" class="text-warning"
+                                   th:if="${#fields.hasErrors('passwd')}" th:errors="*{passwd}">
                                 6~16 자의 영문 소문자, 숫자와 특수기호(_)만 사용할 수 있습니다</span> </div>
                 </div>
 
@@ -100,26 +102,35 @@
                            for="zip1">우편번호</label>
                     <div class="col-1">
                         <input type="text" name="zip1" id="zip1"
-                               class="form-control border-danger bg-light" readonly> </div>
+                               class="form-control border-danger bg-light" readonly
+                               th:value="${member.zip1}"> </div>
                     <div class="col-1">
                         <input type="text" name="zip2" id="zip2"
-                               class="form-control border-danger bg-light" readonly> </div>
+                               class="form-control border-danger bg-light" readonly
+                               th:value="${member.zip2}"> </div>
                     <div class="col-3">
                         <button type="button" id="zipbtn" class="btn btn-dark"
                                 data-bs-toggle="modal" data-bs-target="#zipmodal">
                             <i class="fas fa-question-circle"></i> 우편번호 찾기 </button>
                     </div>
+                    <span th:if="${#fields.hasErrors('zip1') or #fields.hasErrors('zip2')}"
+                          th:errors="*{zip1}"></span>
                 </div>
 
                 <div class="row col-11 offset-1 mb-3 align-items-center">
                     <label class="col-2 form-label text-danger text-end"
                            for="addr1">나머지 주소</label>
-                    <div class="col-4">
+                    <div class="col-3">
                         <input type="text" name="addr1" id="addr1"
-                               class="form-control border-danger bg-light" readonly> </div>
+                               class="form-control border-danger bg-light" readonly
+                               th:value="${member.addr1}">
                     <div class="col-4">
                         <input type="text" name="addr2" id="addr2"
-                               class="form-control border-danger"> </div>
+                               class="form-control border-danger"
+                               th:value="${member.addr2}"> </div>
+                        <span class="col text-warning"
+                              th:if="${#fields.hasErrors('addr1') or #fields.hasErrors('addr2')}"
+                              th:errors="*{addr2}"></span>
                 </div>
 
                 <div class="row col-11 offset-1 mb-3 align-items-center">
@@ -128,11 +139,12 @@
                     <div class="col-5">
                         <div class="input-group">
                             <input type="text" name="email1" id="email1"
-                                   class="form-control border-danger">
+                                   class="form-control border-danger"
+                                   th:value="${member.email1}">
                             <span class="input-group-text border-danger">@</span>
                             <input type="text" name="email2" id="email2"
                                    class="form-control border-danger bg-light" readonly
-                            >
+                                   th:value="${member.email2}">
                         </div>
                     </div>
                     <div class="col-2">
@@ -143,6 +155,9 @@
                             <option value="gmail.com">gmail.com</option>
                             <option value="hotmail.com">hotmail.com</option>
                         </select> </div>
+                    <span class="col text-warning"
+                          th:if="${#fields.hasErrors('email1') or #fields.hasErrors('email2')}"
+                          th:errors="*{email1}"></span>
                 </div>
 
                 <div class="row col-11 offset-1 mb-3 align-items-center">
@@ -158,10 +173,15 @@
                     </div>
                     <div class="col-2">
                         <input type="text" name="tel2" id="tel2"
-                               class="form-control border-danger"> </div>
+                               class="form-control border-danger"
+                               th:value="${member.tel2}"> </div>
                     <div class="col-2">
                         <input type="text" name="tel3" id="tel3"
-                               class="form-control border-danger"> </div>
+                               class="form-control border-danger"
+                               th:value="${member.tel3}"> </div>
+                    <span class="col text-warning"
+                          th:if="${#fields.hasErrors('tel2') or #fields.hasErrors('tel3')}"
+                          th:errors="*{tel2}"></span>
                 </div>
 
                 <div class="row col-11 offset-1 mb-3 align-items-center">
@@ -194,8 +214,8 @@
             <input type="hidden" name="phone" id="phone">
             <input type="hidden" name="checkuid" id="checkuid">
 
+            </div>
         </form>
-
     </div>
 
     <!-- 우편번호 폼 모달 -->
