--- a/src/main/resources/templates/pds/write.html
+++ b/src/main/resources/templates/pds/write.html
@@ -9,10 +9,10 @@
     </th:block>
 
 <div id="main">
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+
 
     <div class="mt-5">
-        <i class="fa-solid fa-pen-to-square fa-2xl"> 게시판 </i>
+        <i class="fa-solid fa-pen-to-square fa-2xl"> 파일럿 프로그램 </i>
         <hr>
     </div>
 
@@ -27,8 +27,7 @@
     </div>
 
     <div class="row mt-2 offset-2 col-8">
-        <form class="card card-body bg-light"
-            th:object="${board}" name="bdfrm" id="bdfrm">
+        <form class="card card-body bg-light" name="pfrm" id="pfrm">
 
             <div class="row">
                 <label class="col-3 col-form-label text-danger text-end"
@@ -36,8 +35,6 @@
                 <div class="col-6">
                     <input type="text" name="title" id="title"
                            class="form-control border-danger">
-                    <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"
-                     class="text-warning"></span>
                 </div>
             </div>
 
@@ -48,8 +45,6 @@
                     <input type="text" name="userid" id="userid"
                            class="form-control border-danger bg-light"
                            readonly value="abc123" >
-                    <span th:if="${#fields.hasErrors('userid')}" th:errors="*{userid}"
-                       class="text-warning"></span>
                 </div>
             </div>
 
@@ -59,17 +54,15 @@
                 <div class="col-6">
                     <textarea name="content" id="content"
                               class="form-control border-danger" rows="15"></textarea>
-                   <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}" class="text-warning"></span>
                 </div>
             </div>
 
             <div class="row mt-2">
                 <label class="col-3 col-form-label text-danger text-end"
-                       for="g-recaptcha">자동가입방지</label>
+                       for="attach">첨부파일</label>
                 <div class="col-6">
-                    <div class="g-recaptcha"
-                         data-sitekey="6LdmIwgbAAAAAPO06Cyw44ZE0pkeDeMHEwVbgiM-"></div>
-                    <input type="hidden" name="grecaptcha" id="g-recaptcha">
+                    <input type="file" name="attach" id="attach"
+                           class="form-control border-danger bg-light">
                 </div>
             </div>
 
@@ -91,6 +84,18 @@
     </div>
 
 </div>
-<script src="/assets/js/board.js"></script>
+<script>
+    const writebtn = document.querySelector("#writebtn");
+    writebtn?.addEventListener('click', () => {
+        const pfrm = document.forms.pfrm;
+        if (pfrm.title.value === '') alert('제목을 작성하세요!');
+        else if (pfrm.content.value === '') alert('본문을 작성하세요!');
+        else {
+            pfrm.method = 'post';
+            pfrm.enctype = 'multipart/form-data';
+            pfrm.submit();
+        }
+    });
+</script>
 </th:block>
 </html>
