--- a/src/main/resources/templates/pds/list.html
+++ b/src/main/resources/templates/pds/list.html
@@ -3,36 +3,107 @@
       xmlns:layout="http://www.ultra.net.nz/thymeleaf/layout"
       layout:decorate="~{layout/template}">
 <th:block layout:fragment="content">
-<div id="main">
+    <div id="main" th:with="pglink=${ #strings.isEmpty(param.fkey) ? '/board/list?cpg=':'/board/find?ftype='+ param.ftype + '&fkey=' + param.fkey + '&cpg='}">
+
     <div class="mt-5">
         <i class="fa-solid fa-download fa-2xl"></i> 자료실 </i>
         <hr>
     </div>
 
-    <div>
-        <p th:text="${title}"></p>
-        <p th:text="${userid}"></p>
-        <p th:text="${content}"></p>
-        <p th:text="${regdate}"></p>
-        <p th:text="${thumbs}"></p>
-        <p th:text="${views}"></p>
-        <p th:text="${uuid}"></p>
+    <div class="row mb-3">
+        <th:block  th:if="${session.UID ne null}">
+            <div class="col-1">
+                <select class="form-select" id="findtype">
+                    <option value="title">제목</option>
+                    <option value="titcont">제목+내용</option>
+                    <option value="content">내용</option>
+                    <option value="userid">작성자</option>
+                </select></div>
 
-        <p th:text="${attach}"></p>
-        <p th:text="${fname}"></p>
-        <p th:text="${ftype}"></p>
-        <p th:text="${fdowns}"></p>
-        <p th:text="|${fsize} KB|"></p>
-    </div>
-    <div>
-        <p><a href="/pilot/down?pno=1">압축파일1</a></p>
-        <p><a href="/pilot/down?pno=2">이미지2</a></p>
-        <p><a href="/pilot/down?pno=3">텍스트3</a></p>
+            <div class="col-4 text-start">
+                <input type="text" class="form-control col-2" id="findkey"
+                       th:value="${param.fkey}"></div>
+
+            <div class="col-3 text-start" >
+                <button type="button" name="findbtn" id="findbtn" class="btn btn-light">
+                    <i class="fa-solid fa-magnifying-glass"></i>검색하기</button>
+
+            </div>
+            <div class="offset-2 col-2 text-end">
+                <button type="button" id="newbtn" name="newbtn" class="btn btn-light">
+                    <i class="fa fa-plus-circle"></i>새글쓰기</button>
+            </div>
+        </th:block>&nbsp;
     </div>
 
-    <div>
-        <img src="/pilot/showimg" alt="" />
-    </div>
+        <div class="row">
+            <div class="offset-1 col-10 text-center">
+                <table class="table table-striped tbborder">
+                    <thead class="thbg">
+                    <tr>
+                        <th style="width: 7%">번호</th><th>제목</th>
+                        <th style="width: 12%">작성자</th><th style="width: 12%">작성일</th>
+                        <th style="width: 5%">첨부</th>
+                        <th style="width: 7%">추천</th><th style="width: 7%">조회</th>
+                    </tr>
+                    </thead>
+                    <tr>
+                        <th>공지</th>
+                        <th><span class="badge badge-danger"></span>
+                            석가탄신일,성탄절 대체공휴일 확정...27~29일 사흘 연휴</th>
+                        <th>운영자</th><th>2023-05-04</th>
+                        <th>567</th><th>1345</th>
+                    </tr>
+                    <tr th:each="pds:${pds}">
+                        <th th:text="${pds.pno}">&nbsp;</th>
+                        <th><a th:href="|/board/view?pno= ${pds.pno}|" th:text="${pds.title}" >&nbsp;</a></th>
+                        <th th:text="${pds.userid}">&nbsp;</th>
+                        <th th:text="${#strings.substring(pds.regdate,0,10)}"></th>
+                        <th>&nbsp;</th>
+                        <th th:text="${pds.thumbs}">&nbsp;</th>
+                        <th th:text="${pds.views}">&nbsp;</th>
+                    </tr>
+
+                </table>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="offset-1 col-10 text-center">
+                <nav>
+                    <ul class="pagination justify-content-center">
+                        <th:block th:if="${cpg gt 1}">
+                            <li class="page-item"><a class="page-link" th:href="|${pglink}1|">처음</a></li>
+                        </th:block>
+                        <th:block th:if="${cpg - 1 gt 0}"><li class="page-item"></th:block>
+                        <th:block th:unless="${cpg - 1 gt 0}"><li class="page-item disabled"></th:block>
+                        <a class="page-link" th:href="|${pglink}${cpg - 1}|">이전</a></li>
+
+
+                        <th:block th:each="i:${#numbers.sequence(stpg,stpg+9)}">
+                            <th:block th:if="${i le cntpg}">
+                                <th:block th:if="${i ne cpg}"><li class="page-item"></th:block>
+                                <th:block th:if="${i eq cpg}"><li class="page-item active"></th:block>
+                                <a class="page-link" th:href="|${pglink}${i}|" th:text="${i}"> </a>
+                                </li>
+                            </th:block>
+                        </th:block>
+
+                        <!--                    <th:block th:if="${(cpg+1) lt cntpg}"><li class="page-item"></th:block>-->
+                        <!--                    <th:block th:if="${(cpg+1) gt cntpg}"><li class="page-item disabled"></th:block>-->
+
+                        <li th:class="${ (cpg + 1 le cntpg) ? 'page-item' : 'page-item disabled' }">
+                            <a class="page-link" th:href="|${pglink}${cpg + 1}|">다음</a></li>
+
+
+                        <th:block th:if="${cpg lt cntpg}">
+                            <li class="page-item"><a class="page-link" th:href="|${pglink}${cntpg}|">끝</a></li>
+                        </th:block>
+
+                    </ul>
+                </nav>
+            </div>
+        </div>
 
 </div>
 </th:block>
