--- a/src/main/resources/templates/pilot/write.html
+++ b/src/main/resources/templates/pilot/write.html
@@ -4,15 +4,15 @@
       layout:decorate="~{layout/template}">
 <th:block layout:fragment="content">
 
-<!--    <th:block th:if="${#strings.isEmpty(session.UID)}">-->
-<!--        <script>location.href = "/";</script>-->
-<!--    </th:block>-->
+    <th:block th:if="${#strings.isEmpty(session.UID)}">
+        <script>location.href = "/";</script>
+    </th:block>
 
 <div id="main">
 
 
     <div class="mt-5">
-        <i class="fa-solid fa-download fa-2xl"> 자료실 </i>
+        <i class="fa-solid fa-pen-to-square fa-2xl"> 파일럿 프로그램 </i>
         <hr>
     </div>
 
