자료실 - 첨부 파일 다운로드 header,resource, controller,service 구현

--- a/src/main/resources/templates/pds/list.html
+++ b/src/main/resources/templates/pds/list.html
@@ -108,5 +108,10 @@
 
 </div>
 </th:block>
+<script>
+    newbtn?.addEventListener('click',()=>{
+        location.href='/pds/write';
+    })
+</script>
 <script src="/assets/js/pds.js"></script>
 </html>
