--- a/src/main/resources/templates/layout/template.html
+++ b/src/main/resources/templates/layout/template.html
@@ -72,5 +72,6 @@ xmlns:layout="http://www.ultra.net.nz/thymeleaf/layout">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 <script src="/assets/js/semiprojectv4.js"></script>
 <script src="/assets/js/board.js"></script>
+<script src="/assets/js/pds.js"></script>
 </body>
 </html>
